Send messages (console)

--- a/public/chat.html
+++ b/public/chat.html
@@ -21,7 +21,7 @@
             <input type="text" 
                    id="txtMsg"
                    class="form-control mb-2"
-                   placeholder="uid"
+                   placeholder="Message"
                    autocomplete="off">
     
             <h3>Users</h3>
